--- a/Support_Different_Devices/src/main/res/values/strings.xml
+++ b/Support_Different_Devices/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">AndroidTrainingDemo</string>
     <string name="HelloWorld">你好世界</string>
+    <string name="dial">打电话</string>
 </resources>
