--- a/Support_Different_Devices/src/main/res/values/strings.xml
+++ b/Support_Different_Devices/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">AndroidTrainingDemo</string>
     <string name="HelloWorld">你好世界</string>
     <string name="dial">打电话</string>
+    <string name="requestPermission">获取多个权限</string>
 </resources>
